Fixed problem with color:inherit on ios

--- a/src/components/ProjectCard/index.scss
+++ b/src/components/ProjectCard/index.scss
@@ -52,6 +52,10 @@
                     display: flex;
                     flex-direction: column;
 
+                    a{
+                        color:white;
+                    }
+
                     a:visited{
                         color:inherit
                     }
